syntax = "proto3";

package pb;

option go_package = "./pb";

import "google/protobuf/timestamp.proto";

message Account {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string birthday = 5;
  string gender = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateAccountRequest {
  string name = 2;
  string email = 3;
  string password = 4;
  string birthday = 5;
  string gender = 6;
}

message GetAccountRequest {
  string id = 1;
}

message GetAccountsRequest {
  int32 limit = 1;
}

message DeleteAccountRequest {
  string id = 1;
}

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (Account);
  rpc GetAccount(GetAccountRequest) returns (Account);
  rpc GetAccounts(GetAccountsRequest) returns (stream Account);
  rpc DeleteAccount(DeleteAccountRequest) returns (Account);
}